--- a/assets/sass/print/print-general.scss
+++ b/assets/sass/print/print-general.scss
@@ -17,7 +17,9 @@ unbedingt Reihenfolge behalten
   footer,
   .alert,
   .icon--print,
-  .social-sharing {
+  .social-sharing,
+  form,
+  .nav-process {
     display: none;
   }
   header {
